[gd_scene load_steps=10 format=2]

[ext_resource path="res://Grafik/Assets/GUI/particle.png" type="Texture" id=1]
[ext_resource path="res://Szenen/Levels/AufgListe1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Grafik/Assets/GUI/nur_geschafft.png" type="Texture" id=3]
[ext_resource path="res://Szenen/Levels/Level.gd" type="Script" id=6]
[ext_resource path="res://Grafik/Assets/GUI/MainMenu.png" type="Texture" id=7]
[ext_resource path="res://Grafik/Assets/GUI/empty_frame.png" type="Texture" id=23]

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("LevelComplete:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 11, 10, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelComplete:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Circle:mesh:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 3 ),
"transitions": PoolRealArray( 0.406126, 2.54912, 0.406126 ),
"update": 0,
"values": [ 1.0, 150.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Circle:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8, 3 ),
"transitions": PoolRealArray( 0.435275, 2.21914, 0.435275 ),
"update": 0,
"values": [ 1.0, 300.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Circle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.101961, 0.156863, 0.219608, 0.196078 ), Color( 0.101961, 0.156863, 0.219608, 0.356863 ), Color( 0.105882, 0.14902, 0.2, 0.921569 ), Color( 0.101961, 0.156863, 0.219608, 0.196078 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="SphereMesh" id=2]
radius = 148.692
height = 295.155
radial_segments = 32

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0384616, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="CurrentAufgabe" type="Node2D" parent="."]

[node name="LvlListe1" parent="CurrentAufgabe" instance=ExtResource( 2 )]

[node name="AufgabenDone" type="Node2D" parent="."]
visible = false

[node name="LevelComplete" type="Node2D" parent="."]
position = Vector2( 632, 256 )
scale = Vector2( 1.7, 1.7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelComplete"]
playback_speed = 0.5
anims/LevelComplete = SubResource( 5 )

[node name="Circle" type="MeshInstance2D" parent="LevelComplete"]
modulate = Color( 0.10527, 0.150244, 0.20306, 0.808368 )
position = Vector2( 0, 35.2941 )
mesh = SubResource( 2 )

[node name="LevelComplete" type="Sprite" parent="LevelComplete"]
z_index = 2
texture = ExtResource( 3 )
hframes = 4
vframes = 3
frame = 10

[node name="Particles2D" type="CPUParticles2D" parent="LevelComplete/LevelComplete"]
position = Vector2( 0, 37.6471 )
emitting = false
amount = 35
lifetime = 9.0
one_shot = true
preprocess = 0.25
speed_scale = 1.5
explosiveness = 1.0
randomness = 0.4
lifetime_randomness = 0.77
texture = ExtResource( 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 90.0
initial_velocity_random = 0.31
angular_velocity = 28.0
linear_accel = 1.0
damping = 22.0
angle = 45.0
angle_random = 1.0
scale_amount = 0.5
scale_amount_random = 0.3
scale_amount_curve = SubResource( 3 )

[node name="Lvlend" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="LvlEndedMenu" type="Sprite" parent="Lvlend"]
position = Vector2( 632, 312 )
scale = Vector2( 1.01792, 1.01792 )
texture = ExtResource( 7 )

[node name="Continue" type="Sprite" parent="Lvlend"]
position = Vector2( 632, 392 )
scale = Vector2( 0.4741, 0.4741 )
texture = ExtResource( 23 )

[node name="Label" type="Label" parent="Lvlend/Continue"]
margin_left = -219.0
margin_top = -34.0
rect_scale = Vector2( 2, 2 )
text = "Weiter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Control" parent="Lvlend/Continue"]
margin_left = -236.0
margin_top = -34.0
margin_right = 236.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uebersicht" type="Sprite" parent="Lvlend"]
position = Vector2( 632, 432 )
scale = Vector2( 0.4741, 0.4741 )
texture = ExtResource( 23 )

[node name="Label" type="Label" parent="Lvlend/Uebersicht"]
margin_left = -219.0
margin_top = -34.0
rect_scale = Vector2( 2, 2 )
text = "Aufgaben Ãœbersicht"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uebersicht" type="Control" parent="Lvlend/Uebersicht"]
margin_left = -236.0
margin_top = -34.0
margin_right = 236.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="LevelComplete/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="gui_input" from="Lvlend/Continue/Continue" to="." method="_on_Continue_gui_input"]
[connection signal="gui_input" from="Lvlend/Uebersicht/Uebersicht" to="." method="_on_Uebersicht_gui_input"]
